Migrate Spark integration tests to server runner